fix issues and implement collapse button

--- a/style.css
+++ b/style.css
@@ -55,31 +55,69 @@ body {
       }
 
       .input-fields-container {
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
         padding: 20px;
         text-align: left;
-        display: inline-block;
 
         fieldset {
           display: flex;
           flex-direction: column;
+          position: relative;
           width: 100%;
           border: 1px solid #444;
           padding: 10px;
-          margin-bottom: 20px;
-
           box-sizing: border-box;
+          transition: max-height 0.3s ease, opacity 0.3s ease;
+
+          .fieldset-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            transform: translateY(-50%);
+            padding: 0 10px;
+            box-sizing: border-box;
+
+            .fieldset-title {
+              background-color: #2B2B2B;
+              padding: 5px;
+              font-size: 16px;
+              font-weight: bold;
+              color: #ccc;
+            }
+
+            .toggle-fieldset {
+              background-color: #2B2B2B;
+              border: none;
+              padding: 5px;
+              color: white;
+              font-size: 16px;
+              cursor: pointer;
+              transform: rotate(0deg) translateY(-10%);
+            }
+          }
+
+          &.collapsed {
+            .fieldset-subcontainer {
+              max-height: 0;
+              opacity: 0;
+            }
+
+            .toggle-fieldset {
+              transform: rotate(180deg) translateY(20%);
+            }
+          }
 
           .field {
             display: flex;
             height: 40px;
             align-items: center;
             justify-content: center;
-
-            legend {
-              font-size: 16px;
-              font-weight: bold;
-              color: #ccc;
-            }
 
             label {
               display: inline-block;
@@ -139,94 +177,100 @@ body {
             }
           }
 
-          .cap-points-subcontainer,
-          .area-points-subcontainer,
-          .borders-subcontainer,
-          .rings-subcontainer {
-            max-height: 400px;
-            overflow-y: auto;
-            border: 1px solid #444;
-            padding: 10px;
-            background: #1e1e1e;
+          .fieldset-subcontainer {
+            margin-top: 20px;
+            overflow: hidden;
+            transition: max-height 0.3s ease, opacity 0.3s ease;
+            max-height: 1000px;
+            opacity: 1;
 
-            .cap-point,
-            .area-point,
-            .border,
-            .ring {
-              display: flex;
-              flex-direction: column;
-              position: relative;
-              padding: 10px 20px;
-              background-color: #1e1e1e;
+            .element-container {
+              max-height: 400px;
+              overflow-y: auto;
+              border: 1px solid #444;
+              padding: 10px;
+              background: #1e1e1e;
+              transition: opacity 0.3s ease;
 
-              .drag-handle {
-                position: absolute;
+              .cap-point,
+              .area-point,
+              .border,
+              .ring {
                 display: flex;
-                justify-content: center;
-                align-items: center;
-                text-align: center;
-                top: 5px;
-                height: 111px;
-                margin: 0;
-                left: 5px;
-                width: 25px;
-                cursor: grab;
-                font-size: 16px;
-                color: #ccc;
-                user-select: none;
-                background-color: #2b2b2b;
-                border-radius: 4px;
-              }
-
-              .delete-button {
-                position: absolute;
-                padding: 4px 10px;
-                margin: 0;
-                top: 5px;
-                right: 5px;
-              }
-
-              .delete-cap-point-button {
-                height: 351px;
-              }
-
-              .delete-area-point-button {
-                height: 111px;
-              }
-
-              .delete-border-button {
-                height: 231px;
-              }
-
-              .delete-ring-button {
-                height: 191px;
-              }
-
-              &:first-child {
-                padding-top: 0;
-              }
-
-              &:last-child {
-                padding-bottom: 0;
-              }
-
-              &:not(:first-child) {
+                flex-direction: column;
+                position: relative;
                 padding: 10px 20px;
-                border-top: 1px solid white;
+                background-color: #1e1e1e;
 
-                .delete-button,
                 .drag-handle {
-                  margin-top: 10px;
+                  position: absolute;
+                  display: flex;
+                  justify-content: center;
+                  align-items: center;
+                  text-align: center;
+                  top: 5px;
+                  height: 111px;
+                  margin: 0;
+                  left: 5px;
+                  width: 25px;
+                  cursor: grab;
+                  font-size: 16px;
+                  color: #ccc;
+                  user-select: none;
+                  background-color: #2b2b2b;
+                  border-radius: 4px;
                 }
 
-              }
+                .delete-button {
+                  position: absolute;
+                  padding: 4px 10px;
+                  margin: 0;
+                  top: 5px;
+                  right: 5px;
+                }
 
-              &:not(:last-child) {
-                border-bottom: 1px solid white;
-              }
+                .delete-cap-point-button {
+                  height: 351px;
+                }
 
-              &.dragged {
-                border: 0px;
+                .delete-area-point-button {
+                  height: 111px;
+                }
+
+                .delete-border-button {
+                  height: 231px;
+                }
+
+                .delete-ring-button {
+                  height: 191px;
+                }
+
+                &:first-child {
+                  padding-top: 0;
+                }
+
+                &:last-child {
+                  padding-bottom: 0;
+                }
+
+                &:not(:first-child) {
+                  padding: 10px 20px;
+                  border-top: 1px solid white;
+
+                  .delete-button,
+                  .drag-handle {
+                    margin-top: 10px;
+                  }
+
+                }
+
+                &:not(:last-child) {
+                  border-bottom: 1px solid white;
+                }
+
+                &.dragged {
+                  border: 0px;
+                }
               }
             }
           }
